	2004-08-25 - call term->option() on entry if the default terminal is set
	from GNUTERM. We have only been doing this for the libgd terminals, but
	it turns out to be necessary for PostScript also, and probably others.
	Bug #1509033

	* demo/stringvar.dem demo/html/index.save demo/html/Makefile:
	Modify the stringvar demo for use with webify, and add it to the
	demo web page.

2006-06-19  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm: Initialize PS_default_font to "Helvetica,14".
	In the worst case scenario, this guarantees a non-zero font size
	and an actual PostScript font.
	Bug #1509033

2006-06-19  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* configure.in (GNUPLOT_PS_DIR): Do not pass GNUPLOT_PS_DIR in
	config.h .

	* src/Makefile.am: Pass GNUPLOT_PS_DIR as a CPPFLAG.

	* term/Makefile.am.in: Install the *.ps files the automake way.

	* config/makefile.mgw (WXT): Do not install the PNG icons of the
	wxWidgets terminal (now embedded).

2006-06-19  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot3d.c (get_3ddata): After reading in the data points, check
	that the axis ranges are legal.  If the input data contains NaN or Inf
	then the axis scaling may fail.
	Bug #1490699.

2006-05-18  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wtext.c: Add mouse wheel scroll support for text window.

2006-06-18  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/README.ja docs/term-ja.diff
	src/win/README.win-ja src/win/wgnuplot-ja.mnu:
	Sync Japanese documentation to recent changes in English files.

2006-06-18  Ethan A Merritt  <merritt@u.washington.edu>

	* src/show.c (show_version):  List additional configuration options.
	Make the show version output more compact (25 lines).

	* term/emf.trm (EMF_linetype EMF_dashtype): It is necessary to set the
	line color and dash type every time either is changed.
	Bugfix.

2006-06-17  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/bitmaps/png/autoscale_png.h: